--- a/arxiv/2025_02_arxiv.html
+++ b/arxiv/2025_02_arxiv.html
@@ -88,6 +88,57 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04325">https://arxiv.org/abs/2502.04325</a></span> Non-unitary time dynamics of topological modes in open planar quantum systems ***** (Bitan Roy)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.03528">https://arxiv.org/abs/2502.03528</a></span> Non-commutative effective field theory of the lowest Landau level superfluid</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.03533">https://arxiv.org/abs/2502.03533</a></span> Generic Hilbert Space Fragmentation in Kogut–Susskind Lattice Gauge Theories</p>
+<br>
+<p class="p1">20250210</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04559">https://arxiv.org/abs/2502.04559</a></span> Generalized η-pairing theory and anomalous localization in non-Hermitian systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04888">https://arxiv.org/abs/2502.04888</a></span> The non-Abelian geometry, topology, and dynamics of a nonreciprocal Su-Schrieffer-Heeger ladder ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04443">https://arxiv.org/abs/2502.04443</a></span> Chiral Instabilities in Driven-Dissipative Quantum Liquids ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04442">https://arxiv.org/abs/2502.04442</a></span> Symmetry Properties of Quantum Dynamical Entropy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04784">https://arxiv.org/abs/2502.04784</a></span> Why ETH? On thermalization and locality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04473">https://arxiv.org/abs/2502.04473</a></span> Fermions and the Renormalisation Group at Large N</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04647">https://arxiv.org/abs/2502.04647</a></span> Derivation of d-wave symmetry in real-space superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04739">https://arxiv.org/abs/2502.04739</a></span> Mixed-symmetry superconductivity and the energy gap **** (J. Maciejko, F. Marsiglio)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.00290">https://arxiv.org/abs/2308.00290</a></span> An introduction to Lieb’s Simplified approach to the Bose gas</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.09674">https://arxiv.org/abs/2308.09674</a></span> Microscopic derivation of a Schr ̈odinger equation in dimension one with a nonlinear point interaction (Jinyeop Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04437">https://arxiv.org/abs/2502.04437</a></span> Tripartite Haar random state has no bipartite entanglement (Beni Yoshida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.04612">https://arxiv.org/abs/2502.04612</a></span> Blinking optical tweezers for atom rearrangements (Jaewook Ahn)</p>
+<p class="p2"><br></p>
+<p class="p1">20250211</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.05383">https://arxiv.org/abs/2502.05383</a></span> Is attention all you need to solve the correlated electron problem? (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.06265">https://arxiv.org/abs/2502.06265</a></span> Transmission through rectangular potentials in semimetals featuring quadratic dispersion (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.05716">https://arxiv.org/abs/2502.05716</a></span> Qubit Regurlarization of Quantum Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.05871">https://arxiv.org/abs/2502.05871</a></span> Symmetric Tensor Coupling in Holographic Mean-Field Theory: Deformed Dirac Cones (Moongul Byun, Taewon Yuk, Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.05313">https://arxiv.org/abs/2502.05313</a></span> Anomalous suppression of large-scale density fluctuations in classical and quantum spin liquids (Duyu Chen, Rhine Samajdar, Yang Jiao, Salvatore Torquato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.06140">https://arxiv.org/abs/2502.06140</a></span> Universality and Crossovers for Quantum-Criticality in 2d metals (Chandra M. Varma)</p>
+<p class="p2"><br></p>
+<p class="p1">20250212</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.06936">https://arxiv.org/abs/2502.06936</a></span> Critically slow Hilbert-space ergodicity in quantum morphic drives (Sau ́l Pilatowsky-Cameo, Soonwon Choi, Wen Wei Ho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07468">https://arxiv.org/abs/2502.07468</a></span> Scrambling Enabled Entropy Accumulation in Open Quantum Systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.06968">https://arxiv.org/abs/2502.06968</a></span> Many-body perturbation theory for moir ́e systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07506">https://arxiv.org/abs/2502.07506</a></span> Two Channel Multi impurity Kondo model ***** (A. M. Tsvelik, G. Kotliar)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07664">https://arxiv.org/abs/2502.07664</a></span> Classification of Gapped Domain Walls of Topological Orders in 2+1 dimensions: A Levin-Wen Model Realization **** (Yidun Wan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.02434">https://arxiv.org/abs/2405.02434</a></span> Almost-idempotent quantum channels and approximate C<span class="s2">∗</span>-algebras (Alexei Kitaev)</p>
+<p class="p2"><br></p>
+<p class="p1">20250213</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07775">https://arxiv.org/abs/2502.07775</a></span> Correlations and Krylov spread for a non-Hermitian Hamiltonian: Ising chain with a complex-valued transverse magnetic field</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07880">https://arxiv.org/abs/2502.07880</a></span> Revisiting the φ6 Theory in Three Dimensions at Large N ***** (Sandra Kvedarait ̇e, Tom Steudtner, Max Uetrecht)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08031">https://arxiv.org/abs/2502.08031</a></span> Large N vector models in the Hamiltonian framework</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08084">https://arxiv.org/abs/2502.08084</a></span> Fermionic CFTs from topological boundaries in abelian Chern-Simons theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08270">https://arxiv.org/abs/2502.08270</a></span> Superconductivity near an Ising nematic quantum critical point in two dimensions (Jing-Rong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08425">https://arxiv.org/abs/2502.08425</a></span> Interlayer interactions in La3Ni2O7 under pressure: from s± to dxy-wave superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.07884">https://arxiv.org/abs/2502.07884</a></span> Magnetic order through Kondo coupling to quantum spin liquids (Natalia B. Perkins, Onur Erten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08120">https://arxiv.org/abs/2502.08120</a></span> Higher-order continuum models for twisted bilayer graphene</p>
+<p class="p2"><br></p>
+<p class="p1">20250214</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09612">https://arxiv.org/abs/2502.09612</a></span> Superspin Renormalization and Slow Relaxation in Random Spin Systems (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09191">https://arxiv.org/abs/2502.09191</a></span> Fundamental Theory of Current-Induced Motion of Magnetic Skyrmions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08699">https://arxiv.org/abs/2502.08699</a></span> Extended strange metal regime from superconducting puddles ***** (Steven A. Kivelson, Jo ̈rg Schmalian, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08700">https://arxiv.org/abs/2502.08700</a></span> Kekul ́e Spiral Order from Strained Topological Heavy Fermions ***** (Jonah Herzog-Arbeitman, Dumitru C ̆alug ̆aru, Haoyu Hu, Jiabin Yu, Nicolas Regnault, Jian Kang, B. Andrei Bernevig, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09506">https://arxiv.org/abs/2502.09506</a></span> Journey from the Wilson exact RG towards the Wegner-Morris Fokker-Planck RG and the Carosso field-coarsening via Langevin stochastic processes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09195">https://arxiv.org/abs/2502.09195</a></span> Orbital-selective correlation effects and superconducting pairing symmetry in a multiorbital t-J model for bilayer nickelates *** (Guijing Duan, Zhiguang Liao, Lei Chen, Yiming Wang, Rong Yu, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08698">https://arxiv.org/abs/2502.08698</a></span> The Saga of α-RuCl3: Parameters, Models, and Phase Diagrams (Steven R. White)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08708">https://arxiv.org/abs/2502.08708</a></span> Dual view of the Z2-Gauged XY Model in 3D ***** (Piers Coleman, Anatoly Kuklov, Alexei Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08702">https://arxiv.org/abs/2502.08702</a></span> Absorbing state transitions with discrete symmetries *** (Hyunsoo Ha, David A. Huse, Rhine Samajdar)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
