--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	--><li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			<li><b>[Feb. 2025]</b> I came back to Canada.
 			</li>
-			<li><b>[Feb. 2025]</b> I will give a <a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2_en.html?ptype=seminar&pid=26276">talk at Institute for Solid State Physics at the University of Tokyo in Kashiwa, Korean on February 5th</a>.
+			<li><b>[Feb. 2025]</b> I will give a <a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2_en.html?ptype=seminar&pid=26276">talk at Institute for Solid State Physics at the University of Tokyo in Kashiwa, Japan on February 5th</a>.
 			</li>
 			<li><b>[Jan. 2025]</b> I will give a <a href="https://kias.re.kr/kias/activities/seminars/view.do?seqno=PGN1720250113-0004&menuNo=404003&mjrcdnm=&sdate=2025-01-19&edate=&pageIndex=1">talk at Korea Institute for Advanced Study in Seoul, Korea on January 21st</a>.
 			</li>
