20250221_daily_arXiv_CV_acceptance_update
Daily arXiv, CV, accepted paper update

--- a/arxiv/2025_02_arxiv.html
+++ b/arxiv/2025_02_arxiv.html
@@ -51,7 +51,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.19023">https://arxiv.org/abs/2501.19023</a></span> Emergence of Topological Non-Fermi Liquid Phases in a Modified Su-Schrieffer-Heeger Chain with Long-Range Interactions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.19154">https://arxiv.org/abs/2501.19154</a></span> Fractons from covariant higher-rank 3D BF theory (Nicola Maggiore)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.19165">https://arxiv.org/abs/2501.19165</a></span> Signatures of Non-Abelian Kitaev quantum spin liquids in noise magnetormetry</p>
-<p class="p3"><a href="https://arxiv.org/abs/2501.14787">https://arxiv.org/abs/2501.14787</a><span class="s2"> Matrix Calculus *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.14787">https://arxiv.org/abs/2501.14787</a></span> Matrix Calculus *****</p>
 <p class="p2"><br></p>
 <p class="p1">20250204</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.01582">https://arxiv.org/abs/2502.01582</a></span> Non-Stabilizerness of Sachdev-Ye-Kitaev Model</p>
@@ -139,6 +139,64 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08698">https://arxiv.org/abs/2502.08698</a></span> The Saga of α-RuCl3: Parameters, Models, and Phase Diagrams (Steven R. White)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08708">https://arxiv.org/abs/2502.08708</a></span> Dual view of the Z2-Gauged XY Model in 3D ***** (Piers Coleman, Anatoly Kuklov, Alexei Tsvelik)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.08702">https://arxiv.org/abs/2502.08702</a></span> Absorbing state transitions with discrete symmetries *** (Hyunsoo Ha, David A. Huse, Rhine Samajdar)</p>
+<br>
+<p class="p1">20250217</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09908">https://arxiv.org/abs/2502.09908</a></span> Rigorous lower bound of the dynamical critical exponent of the Ising model **** (Rintaro Masaoka, Tomohiro Soejima, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09697">https://arxiv.org/abs/2502.09697</a></span> Lattice Schwinger Model and Spacetime Supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09708">https://arxiv.org/abs/2502.09708</a></span> Fractionalized Prethermalization in the One-Dimensional Hubbard Model (Johannes Knolle, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09902">https://arxiv.org/abs/2502.09902</a></span> Resolving the Thermal Paradox: Many-body localization or fractionalization? (Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10023">https://arxiv.org/abs/2502.10023</a></span> Phases and critical transport of the SU(N) Hofstadter-Hubbard model on the triangular lattice Xue-Yang Song</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.09796">https://arxiv.org/abs/2502.09796</a></span> A numerical analysis of Araki-Uhlmann relative entropy in Quantum Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20250218</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10502">https://arxiv.org/abs/2502.10502</a></span> Making sense of negative probabilities: An exact representation of the dynamics of quantum spin chains as classical stochastic processes with particle/antiparticle pairs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10791">https://arxiv.org/abs/2502.10791</a></span> Absence of nontrivial local conserved quantities in the quantum compass model on the square lattice (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10991">https://arxiv.org/abs/2502.10991</a></span> Itinerant topological magnons and spin excitons in twisted transition metal dichalcogenides: Mapping electron topology to spin counterpart</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11106">https://arxiv.org/abs/2502.11106</a></span> Point-group symmetry enriched topological orders (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11624">https://arxiv.org/abs/2502.11624</a></span> High-Temperature Superconductivity from Finite-Range Attractive Interaction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11527">https://arxiv.org/abs/2502.11527</a></span> Application of Many-body Non-perturbative Theories to the Three-Dimensional Attractive Hubbard Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11765">https://arxiv.org/abs/2502.11765</a></span> A square skyrmion lattice in multi-orbital f-electron systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10979">https://arxiv.org/abs/2502.10979</a></span> Steven Weinberg: A Scientific Life ***** (C.P. Burgess, F. Quevedo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11011">https://arxiv.org/abs/2502.11011</a></span> RG-stable parameter relations of a scalar field theory in absence of a symmetry (Howard E. Habera, P. M. Ferreira)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.10524">https://arxiv.org/abs/2502.10524</a></span> Higher-Dimensional Fermionic SYK Model in IR Region</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.11819">https://arxiv.org/abs/2502.11819</a></span> Entanglement and Effective Field Theories</p>
+<p class="p2"><br></p>
+<p class="p1">20250219</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12233">https://arxiv.org/abs/2502.12233</a></span> Quantum Critical Dynamics Induced by Topological Zero Modes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12265">https://arxiv.org/abs/2502.12265</a></span> Quantum geometric photocurrents of quasiparticles in superconductors *** (Pavel A. Volkov, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12931">https://arxiv.org/abs/2502.12931</a></span> Delta-function-potential junctions with quasiparticles occupying tilted bands with quadratic-in-momentum dispersion (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12235">https://arxiv.org/abs/2502.12235</a></span> Canted magnetism and Z2 fractionalization in metallic states of the Lieb lattice Hubbard model near quarter filling ***** (Alexander Nikolaenko, Pietro M. Bonetti, Anant Kale, Martin Lebrat, Markus Greiner, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12259">https://arxiv.org/abs/2502.12259</a></span> Extracting the topological spins from bulk multipartite entanglement (Ady Stern, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12469">https://arxiv.org/abs/2502.12469</a></span> Impurity-induced non-unitary criticality ***** (Xueda Wen, Po-Yao Chang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13009">https://arxiv.org/abs/2502.13009</a></span> Geometric and General Relativistic Techniques for Non-relativistic Quantum Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13005">https://arxiv.org/abs/2502.13005</a></span> Bipolaron dynamics in the one-dimensional SSH model (Eugene Demler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13083">https://arxiv.org/abs/2502.13083</a></span> Spiral multiferroics as a natural skyrmion racetrack (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12252">https://arxiv.org/abs/2502.12252</a></span> Roadmap to fault tolerant quantum computation using topological qubit arrays ***** (Microsoft Quantum)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.12240">https://arxiv.org/abs/2502.12240</a></span> Observable and computable entanglement in time (Alexey Milekhin, Zofia Adamska, John Preskill)</p>
+<p class="p2"><br></p>
+<p class="p1">20250220</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13211">https://arxiv.org/abs/2502.13211</a></span> Unveiling a Hidden Percolation Transition in Monitored Clifford Circuits: Inroads from ZX-Calculus<span class="Apple-converted-space">  </span>*** (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13351">https://arxiv.org/abs/2502.13351</a></span> Beyond Homes scaling: disorder, the Planckian bound and a new universality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13612">https://arxiv.org/abs/2502.13612</a></span> Evidence for spin-fluctuation-mediated superconductivity in electron-doped cuprates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13454">https://arxiv.org/abs/2502.13454</a></span> Accurate Simulation of the Hubbard Model with Finite Fermionic Projected Entangled Pair States</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13616">https://arxiv.org/abs/2502.13616</a></span> Bound states of quasiparticles with quartic dispersion in an external potential: WKB approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13958">https://arxiv.org/abs/2502.13958</a></span> Local and Non-local Entanglement Witnesses of Fermi Liquid (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.13265">https://arxiv.org/abs/2502.13265</a></span> An unusual first order phase transition in a 2D superconductor (A. V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.01656">https://arxiv.org/abs/2407.01656</a></span> Abstraction requires breadth: a renormalisation group approach</p>
+<p class="p2"><br></p>
+<p class="p1">20250221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14034">https://arxiv.org/abs/2502.14034</a></span> Decoherence-induced self-dual criticality in topological states of matter *** (Simon Trebst, Andreas W.W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14194">https://arxiv.org/abs/2502.14194</a></span> Orbital Magnetism in Honeycomb Ladder</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14039">https://arxiv.org/abs/2502.14039</a></span> Projected and Solvable Topological Heavy Fermion Model of Twisted Bilayer Graphene *** (Haoyu Hu, Zhi-Da Song, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14861">https://arxiv.org/abs/2502.14861</a></span> Stacking-dependent Topological Electronic Structures in Honeycomb-kagome Heterolayers ***** (Chan Bin Bark, Hanbyul Kim, Seik Pak, Hong-Guk Min, Sungkyun Ahn, Youngkuk Kim, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14026">https://arxiv.org/abs/2502.14026</a></span> Orbital Wigner functions and quantum transport in multiband systems (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14032">https://arxiv.org/abs/2502.14032</a></span> Critical theories connecting gapped phases with Z2 × Z2 symmetry from the duality web (Andreas Karch, Ryan C. Spieler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14299">https://arxiv.org/abs/2502.14299</a></span> Real-space representation of the second Chern number</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14867">https://arxiv.org/abs/2502.14867</a></span> Emergence of Fermi’s Golden Rule in the Probing of a Quantum Many-Body System</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14033">https://arxiv.org/abs/2502.14033</a></span> Elastic Quantum Criticality in Nematics and Altermagnets via the Elasto-Caloric Effect ***** (Charles R. W. Steward, Grgur Palle, Markus Garst, Jo ̈rg Schmalian, Iksu Jang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14067">https://arxiv.org/abs/2502.14067</a></span> Towards a global phase diagram of Ce-based dipolar-octupolar pyrochlore magnets under magnetic fields (Zhengbang Zhou, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14697">https://arxiv.org/abs/2502.14697</a></span> Nonadiabatic quantum geometry and optical conductivity **** (Raffaele Resta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16842">https://arxiv.org/abs/2411.16842</a></span> Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality ******* (SangEun Han, Shouryya Ray, Igor F. Herbut)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
