--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	--><li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
+			</li>
+			<li><b>[Feb. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/5807cO2bMed1544a951571b6463c0aa5254a9b352" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
+			</li>
 			<li><b>[Feb. 2025]</b> I came back to Canada.
 			</li>
 			<li><b>[Feb. 2025]</b> I will give a <a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2_en.html?ptype=seminar&pid=26276">talk at Institute for Solid State Physics at the University of Tokyo in Kashiwa, Japan on February 5th</a>.
@@ -153,7 +156,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20250210_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/02/10)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20250221_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/02/21)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
