20250301 daily arXiv update

--- a/arxiv/2025_02_arxiv.html
+++ b/arxiv/2025_02_arxiv.html
@@ -197,6 +197,55 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14067">https://arxiv.org/abs/2502.14067</a></span> Towards a global phase diagram of Ce-based dipolar-octupolar pyrochlore magnets under magnetic fields (Zhengbang Zhou, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14697">https://arxiv.org/abs/2502.14697</a></span> Nonadiabatic quantum geometry and optical conductivity **** (Raffaele Resta)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16842">https://arxiv.org/abs/2411.16842</a></span> Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality ******* (SangEun Han, Shouryya Ray, Igor F. Herbut)</p>
+<br>
+<p class="p1">20250224</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.15606">https://arxiv.org/abs/2502.15606</a></span> Local signatures of altermagnetism (Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.15154">https://arxiv.org/abs/2502.15154</a></span> Analytical solution for the relaxed atomic configuration of twisted bilayer graphene including heterostrain (Jian Kang, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14974">https://arxiv.org/abs/2502.14974</a></span> Universal Quantum Computation with the S3 Quantum Double: A Pedagogical Exposition *** (Chiu Fan Bowen Lo, Anasuya Lyons, Ruben Verresen, Ashvin Vishwanath, Nathanan Tantivasadakarn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.14958">https://arxiv.org/abs/2502.14958</a></span> Incommensurate gapless ferromagnetism connecting competing symmetry-enriched deconfined quantum phase transitions (Daniel P. Arovas, Claudio Chamon, Christopher Mudry)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.15373">https://arxiv.org/abs/2502.15373</a></span> Vertex correction for the linear and nonlinear optical responses in superconductors: multiband effect and topological superconductivity (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.15133">https://arxiv.org/abs/2502.15133</a></span> From BPS Spectra of Argyres-Douglas Theories to Families of 3d TFTs (Byeonggi Go, Qiang Jia, Heeyeon Kim, Sungjoon Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20250225</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.16417">https://arxiv.org/abs/2502.16417</a></span> Inversion-asymmetric itinerant antiferromagnets by the space group symmetry ***** (Changhee Lee1 and P. M. R. Brydon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17005">https://arxiv.org/abs/2502.17005</a></span> Phase coherence of charge-6e superconductors via a frustrated Kagome XY antiferromagnet</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.16729">https://arxiv.org/abs/2502.16729</a></span> Callan-Rubakov effects in topological insulators (Andreas P. Schnyder, asatoshi Sato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17430">https://arxiv.org/abs/2502.17430</a></span> Ancilla theory of twisted bilayer graphene I: topological Mott semimetal and symmetric pseudogap metal (Jing-Yu Zhao, Boran Zhou, Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.16700">https://arxiv.org/abs/2502.16700</a></span> Modulation of superconductivity across a Lifshitz transition in alternating-angle twisted quadrilayer graphene (Ashvin Vishwanath, Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.08690">https://arxiv.org/abs/2412.08690</a></span> Lectures in Quantum Gravity ***** (Francesco Di Filippo)</p>
+<p class="p2"><br></p>
+<p class="p1">20250226</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17555">https://arxiv.org/abs/2502.17555</a></span> Quarter Metal Superconductivity ***** (Chiho Yoon, Tianyi Xu, Yafis Barlas, Fan Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17569">https://arxiv.org/abs/2502.17569</a></span> Shining light on collective modes in moir ́e fractional Chern insulators (Nisarga Paul, Ahmed Abouelkomsan, Aidan Reddy, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17574">https://arxiv.org/abs/2502.17574</a></span> Theory of magnetoroton bands in moire ́ materials (Eslam Khalaf, Allan H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17545">https://arxiv.org/abs/2502.17545</a></span> Hyperbolic Monopoles, (Semi-)Holomorphic Chern–Simons Theories, and Generalized Chiral Potts Models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17841">https://arxiv.org/abs/2502.17841</a></span> Quantifying interdisciplinary synergy in higher STEM education (Gahyoun Gim, Jinhyuk Yun, Sang Hoon Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17572">https://arxiv.org/abs/2502.17572</a></span> Detecting emergent 1-form symmetries with quantum error correction (Frank Pollmann, Michael Knap)</p>
+<p class="p2"><br></p>
+<p class="p1">20250227</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18553">https://arxiv.org/abs/2502.18553</a></span> Applications of Statistical Field Theory in Deep Learning - A gentle introduction ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18713">https://arxiv.org/abs/2502.18713</a></span> Symmetries of Living Systems - Symmetry Fibrations and Synchronization in Biological Networks *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19113">https://arxiv.org/abs/2502.19113</a></span> Path integral spin dynamics with exchange and external field</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18563">https://arxiv.org/abs/2502.18563</a></span> Topolectrical circuits – recent experimental advances and developments</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18898">https://arxiv.org/abs/2502.18898</a></span> Zipping many-body quantum states: a scalable approach to diagonal entropy (Yu-Hsueh Chen, Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19015">https://arxiv.org/abs/2502.19015</a></span> The Ising model as a window on quantum gravity with matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19418">https://arxiv.org/abs/2502.19418</a></span> Work and heat exchanged during sudden quenches of strongly coupled quantum systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18595">https://arxiv.org/abs/2502.18595</a></span> Gauging the complex SYK model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19162">https://arxiv.org/abs/2502.19162</a></span> From pure to mixed: Altermagnets as intrinsic symmetry-breaking indicators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19370">https://arxiv.org/abs/2502.19370</a></span> The chiral SYK model in three-dimensional holography *** (Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.18811">https://arxiv.org/abs/2502.18811</a></span> Nested Shadows of Anyons: A Framework for Identifying Topological Phases **** Yun-Tak Oh, Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19270">https://arxiv.org/abs/2502.19270</a></span> Spin and pair density waves in 2D altermagnetic metals (Laura Classen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19259">https://arxiv.org/abs/2502.19259</a></span> U(1) Dirac quantum spin liquid candidate in triangular-lattice antiferromagnet CeMgAl11O19 ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19373">https://arxiv.org/abs/2502.19373</a></span> Boundary Modes in String Field Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20250228</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.20394">https://arxiv.org/abs/2502.20394</a></span> Superconductivity in doped planar Dirac insulators: A renormalization group study ***** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19483">https://arxiv.org/abs/2502.19483</a></span> Single-band square lattice Hubbard model from twisted bilayer C568 (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.20254">https://arxiv.org/abs/2502.20254</a></span> Digital Simulation of Non-Abelian Parafermions in Superconducting Circuits</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.20257">https://arxiv.org/abs/2502.20257</a></span> Symmetry defects and gauging for quantum states with matrix product unitary symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.19471">https://arxiv.org/abs/2502.19471</a></span> ’t Hooft anomalies in metals ***** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.16795">https://arxiv.org/abs/2412.16795</a></span> Introduction to Black Hole Thermodynamics ***** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.14434">https://arxiv.org/abs/2412.14434</a></span> Anomalous Continuous Translations ***** (Nathan Seiberg)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
